kubernetes/django-clearsessions-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    app: django
    task: clearsessions
spec:
  restartPolicy: Never
  containers:
    - name: clearsessions
      image: django_app:latest
      imagePullPolicy: Never
      command: ["python", "manage.py", "clearsessions"]
