kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web
  labels:
    app: django
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: web
  template:
    metadata:
      labels:
        app: django
        tier: web
    spec:
      containers:
        - name: django
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
              name: http
