kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  type: NodePort
  selector:
    app: django
    tier: web
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30252
